@@ -1,4 +1,4 @@
-package moscow.ptnl.app.esu.pct.handler;
+package moscow.ptnl.app.esu.ae.handler;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import liquibase.Liquibase;
@@ -10,12 +10,12 @@ import liquibase.resource.FileSystemResourceAccessor;
 
 import moscow.ptnl.app.config.ESConfiguration;
 import moscow.ptnl.app.domain.model.es.StudentPatientData;
-import moscow.ptnl.app.pct.handler.config.AsyncConfiguration;
-import moscow.ptnl.app.pct.handler.config.RestConfiguration;
-import moscow.ptnl.app.pct.handler.task.PatientConsentsTopicProcessTask;
 import moscow.ptnl.app.config.PersistenceConstraint;
-import moscow.ptnl.app.esu.pct.handler.configuration.MockConfiguration;
-import moscow.ptnl.app.esu.pct.handler.configuration.PersistenceConfiguration;
+import moscow.ptnl.app.esu.ae.handler.configuration.MockConfiguration;
+import moscow.ptnl.app.esu.ae.handler.configuration.PersistenceConfiguration;
+import moscow.ptnl.app.esu.aei.listener.config.AsyncConfiguration;
+import moscow.ptnl.app.esu.aei.listener.config.RestConfiguration;
+import moscow.ptnl.app.esu.aei.listener.task.AttachmentEventProcessTask;
 import moscow.ptnl.app.infrastructure.repository.es.StudentPatientDataRepository;
 import moscow.ptnl.app.model.PlannersEnum;
 import moscow.ptnl.app.model.TopicType;
@@ -71,7 +71,7 @@ public class IntegrationTest {
     EntityManager entityManager;
 
     @Autowired
-    PatientConsentsTopicProcessTask patientConsentsTopicProcessTask;
+    AttachmentEventProcessTask attachmentEventProcessTask;
 
     @Autowired
     EsuInputCRUDRepository esuInputCRUDRepository;
@@ -118,37 +118,34 @@ public class IntegrationTest {
             transactions.execute((s) -> studentPatientDataRepository.save(studentPatientData)).getId();
         }
         //event 1
-        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/ConsentsInfo_1.json")) {
+        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/AttachmentEvent - CREATE - небазовое.json")) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
             buildMessage(reader.lines().collect(Collectors.joining("\n")));
         }
         //event 2
-        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/ConsentsInfo_1.json")) {
+        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/AttachmentEvent - CLOSE - базовое терапевтическое.json")) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-            buildMessage(reader.lines().collect(Collectors.joining("\n")).replace("\"patientId\": 3987621809,", "\"patientId\": 827628764,"));
+            buildMessage(reader.lines().collect(Collectors.joining("\n")));
         }
         //event 3
-        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/ConsentsInfo_1.json")) {
+        try (InputStream inputStream = IntegrationTest.class.getClassLoader().getResourceAsStream("json/AttachmentEvent - CHANGE - базовое терапевтическое.json")) {
             BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
-            buildMessage(reader.lines().collect(Collectors.joining("\n"))
-                    .replace("\"issueDateTime\": \"2022-12-20T00:00:00\",", "\"issueDateTime\": \"2000-01-20T13:00:00\","));
+            buildMessage(reader.lines().collect(Collectors.joining("\n")));
         }
         entityManager.flush();
 
         try {
-            executor.submit(() -> Assertions.assertDoesNotThrow(() -> patientConsentsTopicProcessTask.runTask()));
+            executor.submit(() -> Assertions.assertDoesNotThrow(() -> attachmentEventProcessTask.runTask()));
             Mockito.verify(settingService, Mockito.timeout(30000).times(2)).getSettingProperty(
-                    Mockito.eq(PlannersEnum.I_SCHR_10.getPlannerName() + ".run.mode"), Mockito.any(), Mockito.anyBoolean());
+                    Mockito.eq(PlannersEnum.I_SCHR_2.getPlannerName() + ".run.mode"), Mockito.any(), Mockito.anyBoolean());
             entityManager.flush();
             StreamSupport.stream(esuInputCRUDRepository.findAll().spliterator(), false).forEach(t -> {
                 Assertions.assertEquals(EsuStatusType.PROCESSED, t.getStatus());
 
-                if (t.getId() == 2L) {
-                    Assertions.assertEquals("SCHR_104 - Пациент с идентификатором 827628764 не найден в системе", t.getError());
-                } else if (t.getId() == 1L) {
-                    Assertions.assertNull(t.getError(), "id=" + t.getId());
+                if (t.getId() == 1L) {
+                    Assertions.assertEquals("SCHR_102 - Полученное прикрепление не является педиатрическим или терапевтическим", t.getError());
                 } else {
-                    Assertions.assertEquals("SCHR_107 - Получена более старая информация, чем содержится в индексе", t.getError());
+                    Assertions.assertNull(t.getError());
                 }
             });
             List<StudentPatientData> studentPatientDataList = StreamSupport.stream(studentPatientDataRepository.findAll().spliterator(), false)
@@ -156,15 +153,10 @@ public class IntegrationTest {
                     .collect(Collectors.toList());
             Assertions.assertEquals(1, studentPatientDataList.size(), "Too many patients with Id=3987621809");
             StudentPatientData patientData = studentPatientDataList.get(0);
-            Assertions.assertEquals(LocalDate.of(2018, 5,7), patientData.getPatientInfo().getBirthDate());
-            Assertions.assertEquals(1, patientData.getConsentsInfo().size());
-            Assertions.assertEquals(50699767L, patientData.getConsentsInfo().get(0).getConsentId());
-            Assertions.assertEquals(LocalDateTime.of(2022, 12, 20, 0, 0), patientData.getConsentsInfo().get(0).getIssueDateTime());
-            Assertions.assertArrayEquals(List.of(158370312L).toArray() , patientData.getConsentsInfo().get(0).getDocumentedConsent().getInterventionDetails().getMedInterventionId().toArray());
-            Assertions.assertEquals(1, patientData.getConsentsInfo().get(0).getDocumentedConsent().getImmunodiagnostics().getImmunodiagnostic().size());
-            Assertions.assertArrayEquals(List.of(158370694L).toArray() , patientData.getConsentsInfo().get(0).getDocumentedConsent().getImmunodiagnostics().getImmunodiagnostic().get(0).getImmunoDrugsTns().getImmunoDrugsTnCode().toArray());
-            Assertions.assertEquals(158370689L , patientData.getConsentsInfo().get(0).getDocumentedConsent().getImmunodiagnostics().getImmunodiagnostic().get(0).getImmunoTestKind().getImmunoKindCode());
-            Assertions.assertEquals(158370685L , patientData.getConsentsInfo().get(0).getDocumentedConsent().getImmunodiagnostics().getImmunodiagnostic().get(0).getImmunoTestKind().getInfectionCode());
+            Assertions.assertEquals(3, patientData.getAttachments().size());
+            Assertions.assertEquals(3, patientData.getAttachments().stream()
+                    .filter(p -> Arrays.asList(130744319L, 30696071L, 131402664L).contains(p.getId()))
+                    .count());
         } finally {
             //Т.к. используем реальный сервис Elastic, нужно удалить созданные данные
             List<EsuInput> esuInputs = StreamSupport.stream(esuInputCRUDRepository.findAll().spliterator(), false)
@@ -176,12 +168,12 @@ public class IntegrationTest {
 
     private void buildMessage(String text) throws ExecutionException, InterruptedException {
         final IndexEsuInput indexEsuInput = new IndexEsuInput(10L,
-                LocalDateTime.now(),"1", TopicType.PATIENT_CONSENTS_TOPIC.getName(), text);
+                LocalDateTime.now(),"1", TopicType.ATTACHMENT_EVENT.getName(), text);
         EsuInput testInput = new EsuInput();
         testInput.setStatus(EsuStatusType.NEW);
         testInput.setDateCreated(LocalDateTime.now());
         testInput.setDateUpdated(LocalDateTime.now());
-        testInput.setTopic(TopicType.PATIENT_CONSENTS_TOPIC.getName());
+        testInput.setTopic(TopicType.ATTACHMENT_EVENT.getName());
         String esId = executor.submit(() -> indexEsuInputRepository.save(indexEsuInput)).get().getId();
         testInput.setEsId(esId);
         executor.submit(() -> esuInputCRUDRepository.save(testInput)).get();
